# revisao/src/modulos/usuario/routes/routes.js
@@ -6,7 +6,7 @@ const { mostrarUsuarios,
     deletarUsuarioPorID,
     deletarUsuarios } = require('../controllers/controller');
 const rota = express.Router();
-const Usuario = require('../models/models');
+const upload = require('../../../config/configUpload'); // Atualize o caminho conforme necessário
 
 
 rota.use(express.json());
@@ -18,13 +18,13 @@ rota.get('/usuario', mostrarUsuarios)
 rota.get('/usuario/:id', buscarPorId)
 
 // rota para editar usuario por id
-rota.put('/usuario/:id', editarUsuario)
+rota.put('/usuario/:id', upload.single('foto_perfil'),  editarUsuario)
 
 // rota para deletar usuario por id
 rota.delete('/usuario/:id', deletarUsuarioPorID)
 
 // rota para cadastrar usuario
-rota.post('/usuario', cadastrarUsuario)
+rota.post('/usuario',upload.single('foto_perfil'), cadastrarUsuario)
 
 // rota para deletar todos os usuarios
 rota.delete('/usuario', deletarUsuarios)
